--- a/tox.ini
+++ b/tox.ini
@@ -4,3 +4,9 @@ envlist = py26, py27, py31, py32, py33
 [testenv]
 deps = -rrequirements.txt
 commands = python -m unittest discover
+
+[testenv:py26]
+deps =
+     unittest2
+      -rrequirements.txt
+commands =  unit2 discover
