Install and import mock library.

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,17 @@ commands = python -m unittest discover
 
 [testenv:py26]
 deps =
+     -rrequirements.txt
      unittest2
-      -rrequirements.txt
-commands =  unit2 discover
+     mock
+commands = unit2 discover
+
+[testenv:py27]
+deps =
+     -rrequirements.txt
+     mock
+
+[testenv:py32]
+deps =
+     -rrequirements.txt
+     mock
