Run ert test per every python version with tox.

--- a/tox.ini
+++ b/tox.ini
@@ -3,14 +3,19 @@ envlist = py26, py27, py32, py33
 
 [testenv]
 deps = -rrequirements.txt
-commands = python -m unittest discover
+commands =
+         python -m unittest discover
+         cask exec ert-runner
+setenv = ENVPYTHON ={envpython}
 
 [testenv:py26]
 deps =
      -rrequirements.txt
      unittest2
      mock
-commands = unit2 discover
+commands =
+         unit2 discover
+         cask exec ert-runner
 
 [testenv:py27]
 deps =
