Fucking madness.  Renaming everything...

--- a/tox.ini
+++ b/tox.ini
@@ -2,15 +2,13 @@
 envlist = py26, py27, py32, py33
 
 [testenv]
-deps = -rrequirements.txt
+setenv = ENVPYTHON ={envpython}
 commands =
          python -m unittest discover
          cask exec ert-runner
-setenv = ENVPYTHON ={envpython}
 
 [testenv:py26]
 deps =
-     -rrequirements.txt
      unittest2
      mock
 commands =
@@ -19,10 +17,8 @@ commands =
 
 [testenv:py27]
 deps =
-     -rrequirements.txt
-     mock
+      mock
 
 [testenv:py32]
 deps =
-     -rrequirements.txt
-     mock
+      {[testenv:py27]deps}
