Update test configuration for new contrib system.

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py26, py27, py32, py33
 
 [testenv]
-setenv = ENVPYTHON ={envpython}
+setenv = ENVDIR ={envdir}
 commands =
          python -m unittest discover
          cask exec ert-runner
