--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,9 @@
 envlist = py26, py27, py32, py33
 
 [testenv]
-setenv = ENVDIR ={envdir}
+setenv =
+        ENVDIR ={envdir}
+        ENVPYTHON ={envpython}
 commands =
          python -m unittest discover
          cask exec ert-runner
