--- a/tox.ini
+++ b/tox.ini
@@ -3,24 +3,25 @@ envlist = py26, py27, py32, py33
 
 [testenv]
 setenv =
-        ENVDIR ={envdir}
-        ENVPYTHON ={envpython}
+       ENVDIR ={envdir}
+       ENVPYTHON ={envpython}
+deps = coveralls
 commands =
-         python -m unittest discover
+         coverage run -m unittest discover
          cask exec ert-runner
-
-[testenv:py26]
-deps =
-     unittest2
-     mock
-commands =
-         unit2 discover
-         cask exec ert-runner
-
-[testenv:py27]
-deps =
-      mock
 
 [testenv:py32]
 deps =
-      {[testenv:py27]deps}
+     {[testenv]deps}
+     mock
+
+[testenv:py27]
+deps = {[testenv:py32]deps}
+
+[testenv:py26]
+deps =
+     {[testenv:py27]deps}
+     unittest2
+commands =
+         coverage run {envbindir}/unit2 discover
+         cask exec ert-runner
