Setup coveralls for travis and coverage for tox.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py26, py27, py32, py33
 setenv =
        ENVDIR ={envdir}
        ENVPYTHON ={envpython}
-deps = coveralls
+deps = coverage
 commands =
          coverage run -m unittest discover
          cask exec ert-runner
