Use pytest together with tox.

--- a/tox.ini
+++ b/tox.ini
@@ -6,23 +6,9 @@ skipsdist = True
 setenv =
        ENVDIR ={envdir}
        ENVPYTHON ={envpython}
-deps = coverage
-commands =
-         coverage run -m unittest discover
-         cask exec ert-runner
-
-[testenv:py32]
 deps =
-     {[testenv]deps}
-     mock
-
-[testenv:py27]
-deps = {[testenv:py32]deps}
-
-[testenv:py26]
-deps =
-     {[testenv:py27]deps}
-     unittest2
+     pytest
+     pytest-cov
 commands =
-         coverage run {envbindir}/unit2 discover
+         py.test --cov .
          cask exec ert-runner
