Add git submodules for jedi, jsonrpc, click
Also reflect in requirements.txt. Submodules pointing to:
- jedi v0.8.0
- jsonrpc branch feature/py26
- click 0.7

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@
 # necessary dependencies bundled together with anaconda-mode.  You
 # doesn't need to install any packages by hand.
 
-jedi==0.7
-argparse==1.1
+jedi==0.8
+click==0.7
 json-rpc==1.5
