Only include anaconda-mode in coverage

--- a/tox.ini
+++ b/tox.ini
@@ -10,5 +10,6 @@ deps =
      pytest
      pytest-cov
 commands =
-         py.test --cov .
+         py.test --cov . test/
          cask exec ert-runner
+whitelist_externals = cask
