--- a/tox.ini
+++ b/tox.ini
@@ -7,10 +7,8 @@ setenv =
        ENVDIR ={envdir}
        ENVPYTHON ={envpython}
 deps =
-     mock
-     pytest
-     pytest-capturelog
-     pytest-cov
+     -rrequirements.txt
+     -rtest_requirements.txt
 commands =
          py.test --cov . test/
          cask exec ert-runner
