--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,16 @@
 [tox]
-envlist = py26, py27, py33, py34
+envlist = py26, py27, py33, py34, elisp
 skipsdist = True
 
 [testenv]
-setenv =
-       ENVDIR ={envdir}
-       ENVPYTHON ={envpython}
 deps =
      -rrequirements.txt
      -rtest_requirements.txt
-commands =
-         py.test --cov . test/
-         cask exec ert-runner
+commands = py.test --cov . test/
+
+[testenv:elisp]
+setenv =
+       ENVDIR ={envdir}
+       ENVPYTHON ={envpython}
+commands = cask exec ert-runner
 whitelist_externals = cask
