Correct coveralls report from Travis-CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,10 @@ before_install:
 
 install:
   - cask install
-  - pip install tox git+https://github.com/coagulant/coveralls-python.git coveralls-merge
+  - pip install tox coveralls-merge
 
 script:
   - tox
 
 after_success:
-  - coveralls --output=python-coveralls.json
-  - coveralls-merge emacs-coveralls.json python-coveralls.json
+  - coveralls-merge emacs-coveralls.json
