Ignore dist info directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-__pycache__/
+*.dist-info/
 *.egg-info/
-jsonrpc/
-.cask/
-.tox/
-jedi/
-MANIFEST
-.coverage
-[#]*[#]
 *.elc
 *.pyc
 *~
+.cask/
+.coverage
+.tox/
+[#]*[#]
+__pycache__/
+jedi/
+jsonrpc/
