Run ert outside of tox.

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,7 @@
 [tox]
-envlist = py26, py27, py33, py34, elisp
+envlist = py26, py27, py33, py34
 skipsdist = True
 
 [testenv]
-deps =
-     -rrequirements.txt
-     -rtest_requirements.txt
+deps = -rtest_requirements.txt
 commands = py.test --cov . test/
-
-[testenv:elisp]
-setenv =
-       ENVDIR ={envdir}
-       ENVPYTHON ={envpython}
-commands = cask exec ert-runner
-whitelist_externals = cask
