--- a/roles/emacs/tasks/evm.yml
+++ b/roles/emacs/tasks/evm.yml
@@ -4,6 +4,10 @@
   file: dest=/usr/local/evm state=directory mode=0777
   become: yes
 - name: install emacs
-  command: evm install {{ ansible_env.EMACS_VERSION }}
+  command: evm install {{ item }}
+  with_items: "{{emacs_versions}}"
+  environment: env
 - name: use emacs
-  command: evm use {{ ansible_env.EMACS_VERSION }}
+  command: evm use {{ item }}
+  with_items: "{{emacs_versions}}"
+  environment: env
