Use environment to run cask install.

--- a/roles/emacs/tasks/cask.yml
+++ b/roles/emacs/tasks/cask.yml
@@ -2,3 +2,4 @@
   git: repo=https://github.com/cask/cask dest=~/.cask
 - name: install melpa dependencies
   command: cask install
+  environment: env
