--- a/.travis.yml
+++ b/.travis.yml
@@ -2,22 +2,23 @@ language: python
 
 env:
   global:
-    - PATH=$HOME/.cask/bin:$PATH
+    - PATH=$HOME/.evm/bin:$HOME/.cask/bin:$PATH
+  matrix:
+    - EMACS_VERSION=emacs-24.3-bin
+    - EMACS_VERSION=emacs-24.4-bin
+    - EMACS_VERSION=emacs-24.5-bin
 
 before_install:
-  - sudo add-apt-repository -y ppa:cassou/emacs
-  - sudo add-apt-repository -y ppa:ubuntu-elisp
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq emacs24
-  - curl -fsSkL https://raw.github.com/cask/cask/master/go | python
+  - sudo apt-add-repository -y ppa:ansible/ansible
+  - sudo apt-get update
+  - sudo apt-get install -y ansible
 
 install:
-  - cask install
-  - pip install tox coveralls-merge
+  - ansible-playbook -i inventories/travis playbook.yml
 
 script:
-  - tox
+  # - tox
   - cask exec ert-runner
 
-after_success:
-  - coveralls-merge emacs-coveralls.json
+# after_success:
+  # - coveralls-merge emacs-coveralls.json
