--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,22 @@
 language: emacs-lisp
-
+cache:
+  directories:
+    - $HOME/.cache/pip
+    - $HOME/.pyenv
+    - $HOME/.evm
+    - $HOME/.cask
+    - /usr/local/evm
 env:
   global:
-    - PATH=$HOME/.evm/bin:$HOME/.cask/bin:$PATH
-  matrix:
-    - EMACS_VERSION=emacs-24.3-bin
-    - EMACS_VERSION=emacs-24.4-bin
-    - EMACS_VERSION=emacs-24.5-bin
-
+    - PATH=$HOME/.pyenv/bin:$HOME/.pyenv/shims:$HOME/.evm/bin:$HOME/.cask/bin:$PATH
 before_install:
   - sudo apt-add-repository -y ppa:ansible/ansible
   - sudo apt-get update
   - sudo apt-get install -y ansible
-
 install:
-  - ansible-playbook -i inventories/travis playbook.yml
-
+  - travis_wait ansible-playbook -i inventories/travis playbook.yml
 script:
   - tox
   - cask exec ert-runner
-
 after_success:
   - coveralls-merge emacs-coveralls.json
