Add emacs build dependencies.

--- a/roles/emacs/tasks/dependencies.yml
+++ b/roles/emacs/tasks/dependencies.yml
@@ -3,6 +3,10 @@
   with_items:
     - libncurses-dev
     - libxpm-dev
+    - libxaw7-dev
+    - libtiff4-dev
+    - libpng-dev
+    - libgif-dev
     - autoconf
     - automake
     - texinfo
