Install ipython virtualenv.

--- a/roles/pyenv/tasks/main.yml
+++ b/roles/pyenv/tasks/main.yml
@@ -1,3 +1,5 @@
 - include: dependencies.yml
 - include: pyenv.yml
+- include: virtualenv-plugin.yml
 - include: setuptools.yml
+- include: ipython.yml
