--- a/roles/pyenv/vars/main.yml
+++ b/roles/pyenv/vars/main.yml
@@ -1,5 +1,7 @@
 pyenv_env:
   PATH: "{{ ansible_env.HOME }}/.pyenv/bin:{{ ansible_env.HOME }}/.pyenv/shims:{{ ansible_env.PATH }}"
+ipython_env:
+  PYENV_VERSION: ipython
 python_versions:
   - 2.6.9
   - 2.7.10
