Build emacs with ansible instead of evm.

--- a/roles/emacs/vars/main.yml
+++ b/roles/emacs/vars/main.yml
@@ -1,6 +1,7 @@
 emacs_env:
-  PATH: "{{ ansible_env.HOME }}/.evm/bin:{{ ansible_env.HOME }}/.cask/bin:{{ ansible_env.PATH }}"
+  PATH: "{{ emacs_directory }}/emacs-24.3/bin:{{ emacs_directory }}/emacs-24.4/bin:{{ emacs_directory }}/emacs-24.5/bin:{{ ansible_env.HOME }}/.cask/bin:{{ ansible_env.PATH }}"
 emacs_versions:
   - emacs-24.3
   - emacs-24.4
   - emacs-24.5
+emacs_directory: /usr/local/emacs
