--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ envlist = py26, py27, py33, py34
 
 [testenv]
 deps = -rrequirements.txt
-commands = py.test --cov . test/
+commands = coverage run -m pytest
