Allows to pass command line arguments to pytest.

--- a/tox.ini
+++ b/tox.ini
@@ -3,4 +3,4 @@ envlist = py26, py27, py33, py34
 
 [testenv]
 deps = -rrequirements.txt
-commands = coverage run -m pytest
+commands = coverage run -m pytest []
