--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,5 @@
 envlist = py26, py27, py33, py34
 
 [testenv]
-deps = -rrequirements.txt
+deps = -rrequirements/qa.txt
 commands = coverage run -m pytest []
