--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,14 @@
 [tox]
-envlist = py26, py27, py33, py34
+envlist = ipython, py26, py27, py33, py34, tramp
+
+[testenv:ipython]
+install_command = /bin/echo {packages}
+commands = /bin/true
 
 [testenv]
 deps = -rrequirements/qa.txt
 commands = coverage run -m pytest []
+
+[testenv:tramp]
+install_command = /bin/echo {packages}
+commands = /bin/true
