--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = ipython, py26, py27, py33, py34, tramp
+envlist = ipython, py26, py27, py33, py34, py35, tramp
 
 [testenv:ipython]
 install_command = /bin/echo {packages}
