Run python tests in verbose mode.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ commands = /bin/true
 
 [testenv]
 deps = -rrequirements/qa.txt
-commands = coverage run -m pytest []
+commands = coverage run -m pytest -vv -s []
 
 [testenv:tramp]
 install_command = /bin/echo {packages}
