--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
 pytest>=3.3 ; python_version == "2.7" or python_version >= "3.5"
-pytest==3.2 ; python_version == "2.6" or python_version == "3.3" or python_version == "3.4"
+pytest==3.2 ; python_version == "3.3" or python_version == "3.4"
